--- a/SneakySignal/SneakySignal.csproj
+++ b/SneakySignal/SneakySignal.csproj
@@ -125,6 +125,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\PageScript\MobileApp.js" />
     <Content Include="Scripts\PageScript\DesktopApp.js" />
+    <Content Include="Scripts\qrcode.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
